docs/fran.txt
➜  libft git:(42) ✗ fran
╔══════════════════════════════════════════════════════════════════════════════╗
║                Welcome to Francinette, a 42 tester framework!                ║
╚═══════════════════════╦══════════════════════════════╦═══════════════════════╝
                        ║             libft            ║
                        ╚══════════════════════════════╝
✔ Preparing framework
✔ Executing: norminette
✔ Executing: make fclean all (no bonus)
ℹ Executing: libft-war-machine (https://github.com/y3ll0w42/libft-war-machine)
--------------------------------------------------------------------------------
|                              COMPILING LIBFT                                 |
--------------------------------------------------------------------------------
rules:
all        $(NAME)       fclean       re           clean       bonus     libft.a
ok         ok            ok           ok           ok          missing   found

FUNCTION         TESTS                RESULT
ft_isalpha       compil. failed       KO
ft_isdigit       compil. failed       KO
ft_isalnum       compil. failed       KO
ft_isascii       compil. failed       KO
ft_isprint       compil. failed       KO
ft_strlen        compil. failed       KO
ft_memset        compil. failed       KO
ft_bzero         compil. failed       KO
ft_memcpy        compil. failed       KO
ft_memmove       compil. failed       KO
ft_strlcpy       compil. failed       KO
ft_strlcat       compil. failed       KO
ft_toupper       compil. failed       KO
ft_tolower       compil. failed       KO
ft_strchr        compil. failed       KO
ft_strrchr       compil. failed       KO
ft_strncmp       compil. failed       KO
ft_memchr        compil. failed       KO
ft_memcmp        compil. failed       KO
ft_strnstr       compil. failed       KO
ft_atoi          compil. failed       KO
ft_calloc        compil. failed       KO
ft_strdup        compil. failed       KO
ft_substr        compil. failed       KO
ft_strjoin       compil. failed       KO
ft_strtrim       compil. failed       KO
ft_split         compil. failed       KO
ft_itoa          compil. failed       KO
ft_strmapi       compil. failed       KO
ft_striteri      compil. failed       KO
ft_putchar_fd    compil. failed       KO
ft_putstr_fd     compil. failed       KO
ft_putendl_fd    compil. failed       KO
ft_putnbr_fd     compil. failed       KO

✖ Executing: make fclean all bonus
ft_strlcpy.c:29:20: error: passing 'const char *' to parameter of type 'char *' discards qualifiers [-Werror,-Wincompatible-pointer-types-discards-qualifiers]
        return (ft_strlen(src));
                          ^~~
./libft.h:59:30: note: passing argument to parameter 'str' here
unsigned int    ft_strlen(char *str);
                                ^
1 error generated.
make: *** [<builtin>: ft_strlcpy.o] Error 1

Problem creating the library
